--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ $light-theme-colors: (
   secondary-color: #f2f2f2,
   text-color: #000000,
   text-color-reverse: #ffffff,
+  theme-icon: url('assets/images/icons/moon.svg'),
 );
 
 $dark-theme-colors: (
@@ -37,6 +38,7 @@ $dark-theme-colors: (
   secondary-color: #171717,
   text-color: #ffffff,
   text-color-reverse: #000000,
+  theme-icon: url('assets/images/icons/sun.svg'),
 );
 
 @mixin apply-theme-colors($colors) {
@@ -81,12 +83,6 @@ $dark-theme-colors: (
 
 .dark-theme {
   @include apply-theme-colors($dark-theme-colors);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    @include apply-theme-colors($dark-theme-colors);
-  }
 }
 
 .resize-animation-stopper * {
